--- a/src/head.pug
+++ b/src/head.pug
@@ -11,4 +11,6 @@ link( itemprop="sameAs" href="https://www.instagram.com/stepanovadary_cam" )
 meta( itemprop="gender" content="male" )
 link( itemprop="url" href="https://sitnik.ru" )
 
+link( rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous")
+link( rel="stylesheet" href="https://fonts.googleapis.com/css?family=Economica:400,400i,700,700i" )
 link( rel="stylesheet" href="/index.sss" )
