--- a/src/layout/layout.pcss
+++ b/src/layout/layout.pcss
@@ -1,18 +1,20 @@
 .layout {
-    padding: 10px;
-    &__title{
-        font-family: var(--mainFF);
-        text-transform: uppercase;
-    }
+  padding: 10px;
+  &__title {
+    font-family: var(--mainFF);
+    text-transform: uppercase;
+    text-align: center;
+  }
 }
 
 .soc {
-    a {
-        font-size: 1.7em;
-        margin-right: 0.5em;
-        transition: color 0.3s ease;
-        &:hover {
-            color: #777;
-        }
+  text-align: center;
+  a {
+    font-size: 1.7em;
+    margin-right: 0.5em;
+    transition: color 0.3s ease;
+    &:hover {
+      color: #777;
     }
+  }
 }
