--- a/src/head.pug
+++ b/src/head.pug
@@ -1,15 +1,9 @@
 meta( charset="UTF-8" )
 meta( name="viewport" content="width=device-width" )
 
-//link( rel="preload" href="/earth/worker.js" as="script" )
-//link( rel="preload" href="/earth/map.webp" as="image" )
-//link( rel="preload" href="/earth/here.webp" as="image" )
-//link( rel="preload" href="https://evilmartians.com/locations/ai" as="fetch" crossorigin )
-//link( rel="preconnect" href="https://maps.googleapis.com" )
-
 link( itemprop="sameAs" href="https://www.instagram.com/stepanovadary_cam" )
-meta( itemprop="gender" content="male" )
-link( itemprop="url" href="https://sitnik.ru" )
+meta( itemprop="gender" content="female" )
+link( itemprop="url" href="https://daria-retouch.art/" )
 
 link( rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous")
 link( rel="stylesheet" href="https://fonts.googleapis.com/css?family=Economica:400,400i,700,700i" )
