--- a/src/index.pug
+++ b/src/index.pug
@@ -11,10 +11,10 @@ html( lang="en" itemtype="https://schema.org/Person" itemscope )
         = ' '
         span( itemprop="familyName" ) Stepanova
 
-p.soc
-    a( href='https://www.instagram.com/stepanovadary_cam/' target='_blank')
-        i.fab.fa-instagram
-    a( href='https://www.facebook.com/dasha.stepanova.58726' target='_blank')
-        i.fab.fa-facebook-square
-    a( href='https://www.facebook.com/dasha.stepanova.58726' target='_blank')
-        i.fab.fa-behance-square
+    p.soc
+        a( href='https://www.instagram.com/stepanovadary_cam/' target='_blank')
+            i.fab.fa-instagram
+        a( href='https://www.facebook.com/dasha.stepanova.58726' target='_blank')
+            i.fab.fa-facebook-square
+        a( href='https://www.behance.net/abrikosova0999' target='_blank')
+            i.fab.fa-behance-square
